--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.3",
-    "express.js": "^1.0.0"
+    "express.js": "^1.0.0",
+    "uniqid": "^5.4.0"
   }
 }
