--- a/db/package.json
+++ b/db/package.json
@@ -1,12 +1,15 @@
 {
+  "dependencies": {
+    "express.js": "^1.0.0"
+  },
   "name": "db",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
