--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
+  "name": "public",
+  "version": "1.0.0",
+  "description": "",
+  "main": "sever.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3",
-    "express.js": "^1.0.0",
-    "uniqid": "^5.4.0"
+  "express": "^4.16.4",
+  "uuid": "9.0.1"
   }
 }
