--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-  "express": "^4.16.4",
-  "uuid": "9.0.1"
+    "express": "^4.16.4",
+    "express.js": "^1.0.0",
+    "uuid": "9.0.1"
   }
 }
